--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,56 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+
+}
+
+h1{
+    padding: 20px 0;
+}
+
+/* slideshow container  */
+#container{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 600px;
+    height: 300px;
+
+    margin:  0 auto;
+
+    position: relative;
+
+    background-color: #e5e5e5;
+    border-radius: 20px;
+}
+
+/* img */
+#container img{
+    width: 100%;
+    height: 100%;
+
+    object-fit: cover;
+}
+
+/* arrows */
+#arrow-up{
+    position: absolute;
+    top: 10px;
+
+    font-size: 1.5em;
+    color: white;
+}
+
+#arrow-down{
+    position: absolute;
+    bottom: 10px;
+
+    font-size: 1.5em;
+    color: white;
+
+}
