--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,10 @@ h1{
 
 /* slideshow container  */
 #container{
-
     display: flex;
-    justify-content: center;
-    align-items: center;
 
-    width: 600px;
-    height: 300px;
+    width: 1000px;
+    height: 500px;
 
     margin:  0 auto;
 
@@ -33,28 +30,69 @@ h1{
 }
 
 /* img */
-#container img{
+#image-container {
+    width: 800px;
+    height: 500px;
+}
+#image-container img{
     width: 100%;
     height: 100%;
 
     object-fit: cover;
     object-position: right;
+
 }
 
 /* arrows */
 #arrow-up{
     position: absolute;
     top: 10px;
+    right: 100px;
 
     font-size: 1.5em;
     color: white;
+
+    z-index: 1;
 }
 
 #arrow-down{
     position: absolute;
     bottom: 10px;
+    right: 100px;
+
 
     font-size: 1.5em;
     color: white;
 
+    z-index: 1;
+
+
 }
+
+
+/* thumbnails  */
+#thumbnails-container{
+    width: 200px;
+    height: 100%;
+
+    overflow: hidden;
+    
+}
+
+.thumbnail{
+
+    height: calc(100% / 5);
+    width: 200px;
+    background-size: cover;
+    background-position: center;
+
+    border: 1px solid white;
+
+    opacity: .5;
+
+}
+
+.active{
+    opacity: 1;
+}
+
